2003-12-01  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (OBSOLETE_FUNCTIONS): Add fcntl.
	(NEW_FUNCTIONS): Add fcntl64.
	* cygwin.din: Export fcntl64.  Make fcntl being SIGFE.
	* fcntl.cc (fcntl_worker): New function.
	(fcntl64): New function.
	(_fcntl): Call fcntl_worker.  Convert 32 bit flock structure into
	64 bit flock structure and vice versa.
	* fhandler.cc (fhandler_base::lock): Change 2nd parameter to
	struct __flock64 *.
	* fhandler_disk_file.cc (fhandler_disk_file::lock): Ditto.  Rework
	to be 64 bit aware.
	* fhandler.h: Accomodate above method argument changes.
	* include/cygwin/types.h: Add struct __flock32 and __flock64.
	Define struct flock according to setting of __CYGWIN_USE_BIG_TYPES__.
	* include/cygwin/version.h: Bump API minor number.

2003-12-01  Corinna Vinschen  <corinna@vinschen.de>

	* cygheap.cc (cygheap_init): Set cygheap->shared_prefix.
	* cygheap.h (struct init_cygheap): Add shared_prefix.
	* shared.cc (shared_name): Use cygheap->shared_prefix.

2003-12-01  Pierre Humblet <pierre.humblet@ieee.org>

	* shared.cc (shared_name): Take into account the SE_CREATE_GLOBAL_NAME
	privilege when building the name string.
	(open_shared): Remove the call to OpenFileMapping.
	(shared_info::initialize): Move cygheap initialization to ...   
	(memory_init): ... here. Suppress now useless shared_h variable.
	(user_shared_initialize): Make tu a cygpsid.

2003-12-01  Dr. Volker Zell  <Dr.Volker.Zell@oracle.com>

	* include/tzfile.h: Remove duplicate definition of TM_SUNDAY.
	* localtime.cc: Point TZDIR to the /usr/share/zoneinfo directory used
	by the tzcode package.

2003-11-30  Corinna Vinschen  <corinna@vinschen.de>

	* flock.cc: Renamed from flock.c.

2003-11-29  Christopher Faylor  <cgf@redhat.com>

	* pinfo.h: Remove global_sigs declaration.
	* siginfo.h: Move global_sigs declaration here.
	* Makefile.in: Remove duplicate compiler flag.

2003-11-29  Christopher Faylor  <cgf@redhat.com>
