@@ -1,3 +1,15 @@
+2003-12-01  Thomas Pfaff  <tpfaff@gmx.net>
+
+	* thread.cc (pthread_rwlock::add_reader): Remove mx parameter for
+	List_insert call.
+	(pthread::prepare): Ensure race safeness when adding function
+	pointers to atfork lists by using List_insert.
+	* thread.h (List_insert): Use InterlockedCompareExchangePointer to
+	ensure race safeness without using a mutex.
+	(List_remove): Use InterlockedCompareExchangePointer to
+	ensure race safeness with List_insert.
+	(List::insert): Remove mx parameter for	List_insert call.
+
 2003-12-01  Corinna Vinschen  <corinna@vinschen.de>
 
 	* Makefile.in (OBSOLETE_FUNCTIONS): Add fcntl.
